--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/directives.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="mlb" ng-controller="AppCtrl">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
